feat: functional tools calling
Signed-off-by: Bruno van de Werve <bvandewe@gmail.com>

--- a/src/ui/src/templates/components/login.jinja
+++ b/src/ui/src/templates/components/login.jinja
@@ -3,10 +3,10 @@
     <div class="col-md-6 d-flex justify-content-center">
         <div class="card w-100">
             <div class="card-header text-center">
-                <h4>Welcome to Starter App</h4>
+                <h4 id="login-title">Welcome</h4>
             </div>
             <div class="card-body text-center">
-                <p class="mb-4">Please sign in to access the task management system.</p>
+                <p class="mb-4">Please sign in to access the tool management system.</p>
                 <a href="/api/auth/login" class="btn btn-primary btn-lg">
                     <i class="bi bi-box-arrow-in-right"></i> Login with Keycloak
                 </a>
