--- a/src/ui/src/templates/components/navbar.jinja
+++ b/src/ui/src/templates/components/navbar.jinja
@@ -42,6 +42,12 @@
                         Policies
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" data-page="admin">
+                        <i class="bi bi-gear-wide-connected me-1"></i>
+                        Admin
+                    </a>
+                </li>
             </ul>
 
             <!-- Right side: theme toggle, user info, logout -->
