--- a/src/ui/src/templates/components/navbar.jinja
+++ b/src/ui/src/templates/components/navbar.jinja
@@ -66,12 +66,11 @@
 
                 <!-- User Info -->
                 <div class="dropdown" id="user-dropdown" style="display: none;">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                        <i class="bi bi-person-circle me-1"></i>
-                        <span id="user-name"></span>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" title="User menu">
+                        <i class="bi bi-person-circle"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><span class="dropdown-item-text small text-muted" id="user-email"></span></li>
+                        <li><span class="dropdown-item-text fw-medium" id="user-name"></span></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
